@@ -1,3 +1,8 @@
+2004-08-12  Julien Puydt <jpuydt@free.fr>
+
+	* lib/gm_conf-glib.c: Fix the string_from_list and list_from_string
+	function so they handle "," in one of the strings.
+
 2004-08-11  Julien Puydt <jpuydt@free.fr>
 
 	* lib/contacts/gm_contacts.cpp: Enhancement(?) of the is_local
